Tue Jun 24 13:34:20 1997  Tim Pierce  <twpierce@bio-5.bsd.uchicago.edu>

	* aclocal.m4 (AM_PATH_PROG_LD): Change `ac_cv_path_LD' typo to
	`am_cv_path_LD'.
	* configure: Regenerated.

Sun Jun 22 15:43:07 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Try to detect when people are using one version of libguile and a
	different version of ice-9.  People have been skewing things and
	sending in bug reports.
	* configure.in: Provide libguile its version information through a
 	separate header file generated by the Makefile, not through
 	scmconfig.h.  
	(GUILE_MAJOR_VERSION, GUILE_MINOR_VERSION, GUILE_VERSION):
	AC_SUBST these, instead of AC_DEFINE'ing them.
	(GUILE_STAMP): New AC_SUBST: the time we configured the tree.
	(AC_OUTPUT): Create ice-9/version.scm.
	* acconfig.h (GUILE_MAJOR_VERSION, GUILE_MINOR_VERSION,
	GUILE_VERSION): Deleted.
	* Makefile.in: Regenerated.

	* aclocal.m4: Regenerated, using the libtool 0.9h m4 macros.

	* Makefile.am (EXTRA_DIST): Include acconfig.h in the
	distribution.
	* Makefile.in: Regenerated.

Sat Jun 21 00:14:07 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* ltmain.sh (line 1191): Don't forget 'test' in if statement.

	* ltconfig, ltmain.sh: libtoolized, using libtool 0.9h.

Wed Jun 11 00:34:01 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* ltconfig, ltmain.sh, config.guess: New files from libtool 0.9g.

	* configure.in: By default, include functions in Guile to allow
 	linking with dynamic libraries at run-time.  In other words,
	--enable-dynamic-linking is now the default.
	* configure: Rebuilt.

	* configure.in: Remove space between AC_CHECK_LIB and opening
	paren in check for Rx.
	* configure: Regenerated.

	* configure.in: Remove all mention of xtra_PLUGIN_guile_libs.
	It's never used.
	* configure, Makefile.in: Regenerated.

Tue Jun 10 23:37:12 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* configure.in: Move checks for libraries (-lm, -lnsl, -lsocket,
	-dl, -dld) before checks for functions.
	* configure: Regenerated.
