@@ -105,7 +105,11 @@ AC_CHECK_FUNCS(regcomp, [LIBOBJS="regex-posix.o $LIBOBJS"])
 
 AC_REPLACE_FUNCS(inet_aton putenv strerror)
 
+# When testing for the presence of alloca, we need to add alloca.o
+# explicitly to LIBOBJS to make sure that it is translated to
+# `alloca.lo' for libtool later on.  This can and should be done more cleanly.
 AC_FUNC_ALLOCA
+if test "$ALLOCA" = "alloca.o"; then LIBOBJS="alloca.o $LIBOBJS"; fi
 
 AC_STRUCT_ST_RDEV
 AC_STRUCT_ST_BLKSIZE
