@@ -40,7 +40,7 @@ EXTRA_libguile_la_SOURCES = _scm.h \
 noinst_HEADERS = coop-threads.c coop-threads.h coop.c
 
 libguile_la_DEPENDENCIES = @LIBLOBJS@
-libguile_la_LIBADD = @LIBLOBJS@ @ALLOCA@
+libguile_la_LIBADD = @LIBLOBJS@
 libguile_la_LDFLAGS = -version-info 2:0 -rpath $(libdir)
 
 include_HEADERS = libguile.h
